# Age-Of-Mythology-Retold-Modding-Scripts

./: README.md  export tma file.py  export tmm file.py  export_tmm_model_v2.py  import tma file.py  import tmm file.py  import_tmm_model_v2.py  install_dependencies.py  pyproject.toml  requirements.txt  tma_format.bt  tmm_data_format.bt  tmm_format.bt
src/aomr_modding/: __init__.py  config.py  example_usage.py  export_tma_file.py  export_tmm_file.py  import_tma_file.py  import_tmm_file.py  tma_manager.py  tmm_manager.py  utils.py
templates/: tma_format.bt  tmm_data_format.bt  tmm_format.bt
tests/: test_tma_manager.py
